<resources>
    <string name="app_name">StoryApps</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Start to Share Your Story!</string>
    <string name="title_welcome_page">Welcome to StoryApp</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login</string>
    <string name="title_login_page">Ready to Share Your Story?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome!.</string>
    <string name="greeting">Welcome! %1$s,</string>
    <string name="logout">Log out</string>
    <string name="error_size">Password must be 8 characters</string>
    <string name="error_email">Invalid Email</string>
    <string name="home">Home</string>
    <string name="upload">Upload</string>
    <string name="success_upload">Story Uploaded</string>
    <string name="failed_upload"><![CDATA[Upload Failed]]></string>
    <string name="photo_preview">Photo Preview</string>
    <string name="camera">Camera</string>
    <string name="galery">Gallery</string>
    <string name="title_story">Title</string>
    <string name="description_story">Description</string>
    <string name="detail_image">Image Detail</string>
    <string name="login_image">Login Image</string>
    <string name="sign_up_image">Sign Up Image</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="image_story">Story Image</string>
    <string name="description">Description</string>
    <string name="more">More</string>
</resources>